tests/marouter/errors/false_options/false_input/options.marouter
-n input_net.net.xml -a input_taz.taz.xml -m xxxx/input_od_o.fma -o routes.rou.xml
